--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no">
@@ -49,15 +49,15 @@
 
     <div class="container-fluid">
        <div class="row">
-            <div class="col-12 d-flex align-items-center" style="background-color:#333d51; height:700px;" >
+            <div class="col-xs-12 d-flex align-items-center" style="background-color:#333d51; height:700px;" >
                 <div class="container " style="">
                     <div class="row  align-items-center" style="" >
-                        <div class="col col-xs-10  text-center" style="background-color:red;  ">
-                            <h1 class="" style="font-weight:900; font-size:5em; letter-spacing: 20px; color:#D3AC2B;">DVONN</h1>
+                        <div class="col text-center" style="  margin: 0 auto 0 auto">
+                            <h1 class="display-1" style="font-weight:900;  letter-spacing: 20px; color:#D3AC2B; ">DVONN</h1>
                             
-                            <h1 class="" style="font-weight:900; font-size:4.5em; letter-spacing: 20px; background-color:#D3AC2B; " >RENEAU</h1>
+                            <h1 class="display-1" style="font-weight:900;  letter-spacing: 20px; background-color:#D3AC2B; opacity: 0.9; display:inline-block;" >RENEAU</h1>
                             <br>
-                            <h1 class="" style="font-weight:900;  font-size:1.85em; background-color:green; width:750px; text-align:center; display:inline" >Multi-talented Web Developer</h1>
+                            <h1 class="display-6" style="font-weight:900;  color:#D3AC2B;  margin:0 auto auto auto; display:inline-block; " >Multi-talented Web Developer</h1>
                         </div>
                     </div>                  
                 </div>
@@ -67,8 +67,21 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12" style="background-color:#333d51;">
                 <p class="display-3 text-center mt-3">Skills</p>
+            </div>
+        </div>
+        <div class="row" style="background-color:#333d51;">
+            <div class="col-lg-4 col-sm-6" >
+                <a href="http://">
+                    <img src="/img/html.png" alt="" srcset="" width="500px">
+                </a>
+                <a href="http://">
+                    <img src="/img/boot.png" alt="" srcset="" width="500px">
+                </a>
+                <a href="http://">
+                    <img src="/img/node.jpg" alt="" srcset="" width="500px">
+                </a>
             </div>
         </div>
         <div class="row">
